<resources>
    <string name="app_name">Notes App</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="desc_title">There may be a very long description</string>
    <string name="enter_description">Enter Description</string>
    <string name="add">Add</string>
    <string name="enter_title">Enter Title</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="copy">copy</string>
    <string name="share">share</string>
</resources>
